--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ CRON_IMPORT_REPORTS=-
 CRON_BACKFILL_REPORTS=-
 CRON_REPROCESS_EXISTING_MOVES=-
 FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES=true
-HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
+HMPPS_AUTH_BASE_URI=http://localhost:9090
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
 HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
