--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,18 @@ services:
     environment:
       - SERVER_PORT=9090
       - SPRING_PROFILES_ACTIVE=dev
+      -
+  hmpps-external-users:
+    image: quay.io/hmpps/hmpps-auth:latest
+    container_name: hmpps-auth
+    ports:
+      - "8081:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/auth/health" ]
+    environment:
+      - SERVER_PORT=8080
+      - SPRING_PROFILES_ACTIVE=dev,local-postgres
+      - API_BASE_URL_OAUTH=http://hmpps-auth:9090/auth
 
   hmpps-book-secure-move-api:
     image: rodolpheche/wiremock:latest
