--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 BASM_API_BASE_URL=http://localhost:9999
-HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
+HMPPS_AUTH_BASE_URI=http://localhost:9090
 CRON_IMPORT_REPORTS=-
 CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_BACKFILL_REPORTS=-
