--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,10 @@ jobs:
         environment:
           - SERVER_PORT=9090
           - SPRING_PROFILES_ACTIVE=dev
+      - image: quay.io/hmpps/hmpps-manage-users:latest
+        environment:
+          - SERVER_PORT=8080
+          - SPRING_PROFILES_ACTIVE=dev
       - image: postgres:12.11
         environment:
           POSTGRES_DB: jpc
