--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@7.0.1
+  hmpps: ministryofjustice/hmpps@7.3.3
   browser-tools: circleci/browser-tools@1.4.1
 
 jobs:
@@ -179,6 +179,7 @@ workflows:
                 - main
     jobs:
       - hmpps/gradle_owasp_dependency_check:
+          jdk_tag: "20.0"
           slack_channel: pecs-dev
           context:
             - hmpps-common-vars
