--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,13 @@ jobs:
         environment:
           - SERVER_PORT=9090
           - SPRING_PROFILES_ACTIVE=dev
+      - image: quay.io/hmpps/hmpps-external-users-api:latest
+        environment:
+          - SERVER_PORT=8089
+          - SPRING_PROFILES_ACTIVE=dev,local-postgres
+          - API_BASE_URL_OAUTH=http://hmpps-auth:9090/auth
+          - SPRING_R2DBC_URL=r2dbc:postgresql://auth-db:5432/auth-db?sslmode=prefer
+          - SPRING_FLYWAY_URL=jdbc:postgresql://auth-db:5432/auth-db?sslmode=prefer
       - image: postgres:12.11
         environment:
           POSTGRES_DB: jpc
