--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ CRON_BACKFILL_REPORTS=-
 CRON_REPROCESS_EXISTING_MOVES=-
 FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES=true
 HMPPS_AUTH_BASE_URI=http://localhost:9090
+HMPPS_MANAGE_USERS_BASE_URI=http://localhost:9091
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
 HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
