MAP-309 repoint user details requests from hmpps-auth to manage-users (#538)

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,8 @@ CRON_AUTOMATIC_LOCATION_MAPPING: "-"
 CRON_IMPORT_REPORTS: "-"
 CRON_BACKFILL_REPORTS: "-"
 CRON_REPROCESS_EXISTING_MOVES: "-"
-HMPPS_AUTH_BASE_URI: http://localhost:9090/auth
+HMPPS_AUTH_BASE_URI: http://localhost:9090
+HMPPS_MANAGE_USERS_BASE_URI: http://localhost:9091
 HMPPS_AUTH_CLIENT_ID: pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET: clientsecret
 HMPPS_AUTH_REDIRECT_BASE_URI: http://localhost:8080
