--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -28,7 +28,8 @@ ingress:
 
 env:
   JAVA_OPTS: "-Xmx1024m"
-  HMPPS_AUTH_BASE_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
+  HMPPS_AUTH_BASE_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk"
+  HMPPS_MANAGE_USERS_BASE_URI: "https://manage-users-api-dev.hmpps.service.justice.gov.uk"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-dev.apps.cloud-platform.service.justice.gov.uk"
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 13 * * ?"
   CRON_IMPORT_REPORTS: "-"
