--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -28,7 +28,7 @@ ingress:
 
 env:
   JAVA_OPTS: "-Xmx1024m"
-  HMPPS_AUTH_BASE_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth"
+  HMPPS_AUTH_BASE_URI: "https://sign-in.hmpps.service.justice.gov.uk"
   HMPPS_MANAGE_USERS_BASE_URI: "https://manage-users-api.hmpps.service.justice.gov.uk"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments.hmpps.service.justice.gov.uk"
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 3 * * ?"
