MAP-590 Bump dependencies, require ITs before deploy to dev

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,6 +164,7 @@ workflows:
             - validate
             - build_docker
             - helm_lint
+            - integration_tests
       - request-preprod-approval:
           type: approval
           requires:
