--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             - gradle-{{ checksum "build.gradle.kts" }}
             - gradle-
       - run:
-          command: ./gradlew build
+          command: ./gradlew build koverHtmlReport
       - save_cache:
           paths:
             - ~/.gradle
@@ -28,6 +28,10 @@ jobs:
           path: build/test-results
       - store_artifacts:
           path: build/reports/tests
+          destination: test-report
+      - store_artifacts:
+          path: build/reports/kover/html
+          destination: test-coverage-report
       - persist_to_workspace:
           root: .
           paths:
