--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           install-firefox: false
           install-geckodriver: false
           replace-existing-chrome: true
-          chrome-version: 123.0.6312.86
+          chrome-version: latest
       - run:
           name: Wait for auth
           command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
