--- a/wiremock-docker/docker-compose.yml
+++ b/wiremock-docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   hmpps-book-secure-move-api:
-    image: rodolpheche/wiremock:latest
+    image: wiremock/wiremock:latest
     networks:
       - hmpps
     container_name: wiremock-basm-api
