--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,11 @@
 version: 2.1
-
 orbs:
-  hmpps: ministryofjustice/hmpps@7.5.0
+  hmpps: ministryofjustice/hmpps@10
   browser-tools: circleci/browser-tools@1.4.8
+parameters:
+  localstack-version:
+    type: string
+    default: "3"
 
 jobs:
   validate:
