--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           - API_BASE_URL_OAUTH=http://localhost:9090/auth
           - SPRING_R2DBC_URL=r2dbc:postgresql://localhost:7432/auth-db?sslmode=prefer
           - SPRING_FLYWAY_URL=jdbc:postgresql://localhost:7432/auth-db?sslmode=prefer
-      - image: quay.io/hmpps/hmpps-manage-users-api:latest
+      - image: quay.io/hmpps/hmpps-manage-users-api:2024-10-31.3863.c3f56de
         environment:
           - SERVER_PORT=9091
           - SPRING_PROFILES_ACTIVE=dev
