--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
       - attach_workspace:
           at: ~/app
       - browser-tools/install-browser-tools:
+          install-firefox: false
+          install-geckodriver: false
           chrome-version: 123.0.6312.86
       - run:
           name: Wait for auth
