MAP-1872 increase circleci docker size

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
           POSTGRES_USER: jpc
           POSTGRES_PASSWORD: letmein
         command: -p 5433
-    resource_class: "xlarge"
+    resource_class: "2xlarge"
     steps:
       - checkout
       - attach_workspace:
