--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
           POSTGRES_USER: jpc
           POSTGRES_PASSWORD: letmein
         command: -p 5433
-    resource_class: "2xlarge"
+    resource_class: "xlarge"
     steps:
       - checkout
       - attach_workspace:
@@ -80,6 +80,7 @@ jobs:
       - browser-tools/install-browser-tools:
           install-firefox: false
           install-geckodriver: false
+          replace-existing-chrome: true
           chrome-version: 131.0.6778.86
       - run:
           name: Wait for auth
