--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,11 +77,13 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/app
-      - browser-tools/install-browser-tools:
-          install-firefox: false
-          install-geckodriver: false
-          replace-existing-chrome: true
-          chrome-version: 133.0.6847.2
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - run:
           name: Wait for auth
           command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
