--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -1,7 +1,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
   repository: quay.io/hmpps/calculate-journey-variable-payments
@@ -39,3 +39,4 @@ env:
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-staging.apps.cloud-platform.service.justice.gov.uk"
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
   IMPORT_REPORTS_BACKDATE_ENABLED: "true"
+  SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
