--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -40,6 +40,8 @@ env:
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "false"
   IMPORT_REPORTS_BACKDATE_ENABLED: "true"
   SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
+  APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
+  APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
 
 #whitelist:
 #  office: "217.33.148.210/32"
