--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -8,6 +8,9 @@ image:
   tag: latest
   port: 8080
 
+ai:
+  secret_name: application-insights
+
 db:
   secret_name: rds-instance-calculate-journey-variable-payments-dev
 
@@ -40,5 +43,4 @@ env:
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
   IMPORT_REPORTS_BACKDATE_ENABLED: "true"
   SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
-  APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
   APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
