--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -8,6 +8,9 @@ image:
   tag: latest
   port: 8080
 
+ai:
+  secret_name: application-insights
+
 db:
   secret_name: rds-instance-calculate-journey-variable-payments-preprod
 
