--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -1,55 +1,43 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+generic-service:
+  replicaCount: 1
 
-replicaCount: 1
+  image:
+    repository: quay.io/hmpps/calculate-journey-variable-payments
+    tag: latest
+    port: 8080
 
-image:
-  repository: quay.io/hmpps/calculate-journey-variable-payments
-  tag: latest
-  port: 8080
+  ingress:
+    enabled: true
+    enable_whitelist: false
+    hosts:
+      - host: calculate-journey-variable-payments-preprod.apps.cloud-platform.service.justice.gov.uk
+  #      cert_secret: calculate-journey-variable-payments-cert
+    path: /
+    aws_weight: "100"
 
-ai:
-  secret_name: application-insights
+  env:
+    JAVA_OPTS: "-Xmx1024m"
+    HMPPS_AUTH_BASE_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk"
+    HMPPS_MANAGE_USERS_BASE_URI: "https://manage-users-api-preprod.hmpps.service.justice.gov.uk"
+    HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-preprod.apps.cloud-platform.service.justice.gov.uk"
+    CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 3 * * ?"
+    CRON_IMPORT_REPORTS: "-"
+    CRON_BACKFILL_REPORTS: "-"
+    CRON_REPROCESS_EXISTING_MOVES: "-"
+    SENTRY_ENVIRONMENT: preprod
+    BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.cloud-platform.service.justice.gov.uk"
+    FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
+    IMPORT_REPORTS_BACKDATE_ENABLED: "true"
+    SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
+    APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
+    APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
 
-db:
-  secret_name: rds-instance-calculate-journey-variable-payments-preprod
-
-sentry:
-  secret_name: calculate-journey-variable-payments-sentry
-
-feedback:
-  secret_name: calculate-journey-variable-payments-feedback
-
-ingress:
-  enabled: true
-  enable_whitelist: false
-  hosts:
-    - host: calculate-journey-variable-payments-preprod.apps.cloud-platform.service.justice.gov.uk
-#      cert_secret: calculate-journey-variable-payments-cert
-  path: /
-  aws_weight: "100"
-
-env:
-  JAVA_OPTS: "-Xmx1024m"
-  HMPPS_AUTH_BASE_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk"
-  HMPPS_MANAGE_USERS_BASE_URI: "https://manage-users-api-preprod.hmpps.service.justice.gov.uk"
-  HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-preprod.apps.cloud-platform.service.justice.gov.uk"
-  CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 3 * * ?"
-  CRON_IMPORT_REPORTS: "-"
-  CRON_BACKFILL_REPORTS: "-"
-  CRON_REPROCESS_EXISTING_MOVES: "-"
-  SENTRY_ENVIRONMENT: preprod
-  BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.cloud-platform.service.justice.gov.uk"
-  FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
-  IMPORT_REPORTS_BACKDATE_ENABLED: "true"
-  SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
-  APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
-  APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
-
-#whitelist:
-#  office: "217.33.148.210/32"
-#  health-kick: "35.177.252.195/32"
-#  mojvpn: "81.134.202.29/32"
-#  cloudplatform-live1-1: "35.178.209.113/32"
-#  cloudplatform-live1-2: "3.8.51.207/32"
-#  cloudplatform-live1-3: "35.177.252.54/32"
+  namespace_secrets:
+    calculate-journey-variable-payments-preprod:
+      DB_HOST: database_host
+      DB_PORT: database_port
+      DB_NAME: database_name
+      DB_USERNAME: database_username
+      DB_PASSWORD: database_password
