--- a/helm_deploy/calculate-journey-variable-payments/values.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/values.yaml
@@ -6,7 +6,8 @@ generic-service:
 
   image:
     repository: quay.io/hmpps/calculate-journey-variable-payments
-    tag: app_version # override at deployment time        port: 8080
+    tag: app_version # override at deployment time
+    port: 8080
 
   ingress:
     enabled: true
