--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -4,12 +4,10 @@ generic-service:
   replicaCount: 1
 
   ingress:
-    enabled: true
     enable_whitelist: false
     hosts:
       - host: calculate-journey-variable-payments.hmpps.service.justice.gov.uk
-        cert_secret: calculate-journey-variable-payments-cert
-    path: /
+    tlsSecretName: calculate-journey-variable-payments-cert
     aws_weight: "100"
 
   env:
