--- a/helm_deploy/calculate-journey-variable-payments/Chart.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/Chart.yaml
@@ -1,5 +1,13 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: Calculate Journey Variable Payments helm chart
 name: calculate-journey-variable-payments
-version: 0.1.0
+version: 0.1.1
+
+dependencies:
+  - name: generic-service
+    version: 3.8.0
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
+  - name: generic-prometheus-alerts
+    version: 1.3.10
+    repository: https://ministryofjustice.github.io/hmpps-helm-charts
