--- a/helm_deploy/calculate-journey-variable-payments/values.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/values.yaml
@@ -62,7 +62,10 @@ generic-service:
     calculate-journey-variable-payments-feedback:
       FEEDBACK_URL: feedback_url
 
-  allowlist: false
+  allowlist:
+    groups:
+      - moj_cloud_platform
+      - digital_staff_and_mojo
 
 generic-prometheus-alerts:
     targetApplication: calculate-journey-variable-payments
