MAP-2009 migrations to generic service (#567)
* MAP-2009 migrationg to generic service

* MAP-2009 adding allow list

* MAP-2009 adding allow list

--- a/helm_deploy/calculate-journey-variable-payments/values.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/values.yaml
@@ -62,6 +62,11 @@ generic-service:
     calculate-journey-variable-payments-feedback:
       FEEDBACK_URL: feedback_url
 
+  allowlist:
+    groups:
+      - moj_cloud_platform
+      - digital_staff_and_mojo
+
 generic-prometheus-alerts:
     targetApplication: calculate-journey-variable-payments
     alertSeverity: digital-prison-service-dev
