--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -3,6 +3,9 @@
 generic-service:
   replicaCount: 1
 
+  scheduledDowntime:
+    enabled: true
+
   ingress:
     hosts:
       - calculate-journey-variable-payments-dev.apps.cloud-platform.service.justice.gov.uk
