MAP-1974 enable session persistence

--- a/helm_deploy/calculate-journey-variable-payments/values.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/values.yaml
@@ -45,7 +45,7 @@ generic-service:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: "APPLICATIONINSIGHTS_CONFIGURATION_FILE"
     FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES"
     IMPORT_REPORTS_BACKDATE_ENABLED: "IMPORT_REPORTS_BACKDATE_ENABLED"
-    SERVER_SERVLET_SESSION_COOKIE_SECURE: "SERVER_SERVLET_SESSION_COOKIE_SECURE"
+    SERVER_SERVLET_SESSION_COOKIE_SECURE: "true"
 
   namespace_secrets:
     application-insights:
