--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,6 +31,20 @@ generic-service:
       DB_USERNAME: database_username
       DB_PASSWORD: database_password
 
+  postgresDatabaseRestore:
+    enabled: true
+    namespace_secrets:
+      rds-instance-calculate-journey-variable-payments-prod:
+        DB_NAME: "database_name"
+        DB_USER: "database_username"
+        DB_PASS: "database_password"
+        DB_HOST: "rds_instance_address"
+      rds-instance-calculate-journey-variable-payments-preprod:
+        DB_NAME_PREPROD: "database_name"
+        DB_USER_PREPROD: "database_username"
+        DB_PASS_PREPROD: "database_password"
+        DB_HOST_PREPROD: "rds_instance_address"
+
 generic-prometheus-alerts:
   targetApplication: calculate-journey-variable-payments
   alertSeverity: digital-prison-service-prod
