MAP-2045 cleaning jpa properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   jpa:
     show-sql: true
     generate-ddl: false
+    properties:
+      hibernate.jdbc.batch_size: 5
     hibernate:
       ddl-auto: none
       order_inserts: true
