--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-db:5432/auth-db
 
   hmpps-external-users-api:
-    image: quay.io/hmpps/hmpps-external-users-api:2024-09-23.3630.2e6d15e
+    image: quay.io/hmpps/hmpps-external-users-api
     container_name: hmpps-external-users-api
     depends_on:
       - hmpps-auth
@@ -76,6 +76,7 @@ services:
     container_name: hmpps-manage-users-api
     depends_on:
       - hmpps-external-users-api
+      - hmpps-auth
     ports:
       - "9091:8080"
     healthcheck:
