adding new test path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,6 +249,9 @@ workflows:
       - integration_tests:
           requires:
             - validate
+      - integration_playwright_tests:
+          requires:
+            - integration_tests
       - hmpps/build_docker:
           name: test_build_docker
           publish: false
@@ -278,6 +281,7 @@ workflows:
             - build_docker
             - helm_lint
             - integration_tests
+            - integration_playwright_tests
       - request-preprod-approval:
           type: approval
           requires:
